force-app/main/default/objects/Interview__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <type>Lookup</type>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <relationshipLabel>Interviews</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>