force-app/main/default/objects/Interview__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <type>LongTextArea</type>
    <length>3000</length>
</CustomField>