force-app/main/default/objects/Interview__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Screening</fullName><default>true</default></value>
            <value><fullName>Technical Round</fullName><default>false</default></value>
            <value><fullName>Managerial Round</fullName><default>false</default></value>
            <value><fullName>HR Round</fullName><default>false</default></value>
            <value><fullName>Completed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>